--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,7 @@
-example:
-  kafka:
-    consumer-enabled: ${consumer-enabled:true}
+server:
+  port: 9000
 spring:
   kafka:
-    bootstrap-servers: ${kafka_bootstrap_servers:localhost:9092}
     properties:
       sasl:
         jaas:
@@ -12,22 +10,14 @@ spring:
       security:
         protocol: SASL_PLAINTEXT
     consumer:
+      bootstrap-servers: localhost:9092
+      group-id: group-id
       auto-offset-reset: earliest
-      group-id: example
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      max-poll-records: 1
-      fetch-max-wait: 36000
-      enable-auto-commit: false
-      client-id: example
     producer:
-      client-id: example
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      retries: 2
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     jaas:
       enabled: true
-    listener:
-      poll-timeout: 1800000
-      concurrency: 1
-      ack-mode: manual_immediate
